[package]
name = "demine"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["minesweeper", "solver", "engine", "probabilities", "game"]
categories = ["game-development", "simulation"]
description = "A minesweeper solver."
repository = "https://github.com/canislupaster/demine"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
rand = "0.10.0"
mimalloc = { version = "0.1.48", features = ["v3"], optional = true }

[features]
## Swap the global allocator to mimalloc (v3). Off by default; enable for
## benchmarks and release runs where allocator wins matter.
use-mimalloc = ["dep:mimalloc"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.testing]
inherits = "release"
# Used by cargo test-all alias.
debug-assertions = true

[profile.profiling]
inherits = "release"
# Debug symbols.
debug = true
